# k15_engine_3d

./: .gitignore  CMakeLists.txt  CreateAndroidVisualStudioProject.bat  CreateAndroidVisualStudioProject.bat~  CreateWin32VisualStudioProject.bat  CreateWin64VisualStudioProject.bat  README.md  build.bat  build_win64_vs2012.bat  common.cmake  patch.diff
core/: CMakeLists.txt  K15_Common.h
core/codegen/: CMakeLists.txt  text.txt
core/guilayer/: CMakeLists.txt
core/launcher/: CMakeLists.txt
core/libresourcecompiler/: CMakeLists.txt
core/libshadercompiler/: CMakeLists.txt
core/math/: CMakeLists.txt
core/memory/: CMakeLists.txt
core/oslayer/: CMakeLists.txt
core/rendering/: CMakeLists.txt
core/resourcecompiler/: CMakeLists.txt
core/resourceformats/: CMakeLists.txt
core/runtime/: CMakeLists.txt
core/shadercompilerlib/: CMakeLists.txt
core/string/: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/assimp/: CMakeLists.txt
dependencies/cmake/: dependencies_common_libs.cmake
dependencies/detour/: CMakeLists.txt
dependencies/enet/: CMakeLists.txt
dependencies/glew/: CMakeLists.txt
dependencies/jsoncpp/: CMakeLists.txt
dependencies/libtiff/: CMakeLists.txt
dependencies/logging/: CMakeLists.txt
dependencies/luajit/: CMakeLists.txt
dependencies/math/: CMakeLists.txt
dependencies/minizip/: CMakeLists.txt
dependencies/ois/: CMakeLists.txt
dependencies/os_layer/: CMakeLists.txt
dependencies/rendering/: CMakeLists.txt
dependencies/resourceformats/: .gitignore  CMakeLists.txt
dependencies/squish/: CMakeLists.txt
dependencies/stb/: stb_truetype.h
dependencies/stb_image/: CMakeLists.txt
dependencies/tinyobjloader/: CMakeLists.txt
dependencies/tinythread/: CMakeLists.txt
dependencies/zlib/: CMakeLists.txt
engine/: CMakeLists.txt
engine/cmake/: engine_core_compiler_settings.cmake  engine_core_libraries.cmake  engine_core_src.cmake  engine_rendering_src.cmake  engine_resource_system_src.cmake  engine_serialization_src.cmake  engine_shader_src.cmake
engine/core/: K15_CoreAPI.cpp
engine/doc/: Engine_Features.xls  Folder structure.txt  resource_formats.xls
engine/include/: K15_AABB.h  K15_AABB.inl  K15_AllocatedObject.h  K15_AllocatedObject.inl  K15_AllocatorSettings.h  K15_AllocatorSizes.h  K15_AlphaState.h  K15_AlphaState.inl  K15_Application.h  K15_Application.inl  K15_ApplicationModule.h  K15_ApplicationModuleDescription.h  K15_ApplicationOSLayerBase.h  K15_ApplicationParameter.h  K15_BaseAllocationPattern.h  K15_BaseAllocator.h  K15_BlockAllocator.h  K15_ByteConversion.h  K15_ByteConversion.inl  K15_CStdIncludes.h  K15_CameraComponent.h  K15_CameraComponent.inl  K15_ColorRGBA.h  K15_ColorRGBA.inl  K15_Container.h  K15_Conversion.h  K15_Conversion.inl  K15_DepthState.h  K15_DepthState.inl  K15_Directory.h  K15_DynamicArray.h  K15_DynamicArray.inl  K15_DynamicLibrary.h  K15_DynamicLibraryBase.h  K15_DynamicLibraryBase.inl  K15_DynamicLibraryManager.h  K15_EnumStrings.h  K15_Event.h  K15_EventHandler.h  K15_EventHandler.inl  (+195 more)
engine/inline/: K15_GpuProgramParameter.h
engine/src/: K15_AABB.cpp  K15_AllocatedObject.cpp  K15_AllocatedObject.inl  K15_AllocatorSettings.cpp  K15_AlphaState.cpp  K15_Application.cpp  K15_Application.inl  K15_ApplicationModule.cpp  K15_BaseAllocationPattern.cpp  K15_BaseAllocator.cpp  K15_BaseAllocator.inl  K15_BlockAllocator.cpp  K15_CameraComponent.cpp  K15_ColorRGBA.cpp  K15_DepthState.cpp  K15_Directory.cpp  K15_DynamicArray.inl  K15_DynamicLibrary.inl  K15_DynamicLibraryBase.cpp  K15_DynamicLibraryBase.inl  K15_DynamicLibraryManager.cpp  K15_Event.cpp  K15_Event.inl  K15_EventManager.cpp  K15_EventTask.cpp  K15_EventTypes.cpp  K15_File.cpp  K15_File.inl  K15_FileWatcher.cpp  K15_Font.cpp  K15_FontManager.cpp  K15_Frustum.cpp  K15_GameEvent.cpp  K15_GameEvent.inl  K15_GameObject.cpp  K15_GameObjectComponentBase.cpp  K15_GameState.cpp  K15_GameStateBase.cpp  K15_GameTime.cpp  K15_GameTime.inl  (+109 more)
math/: CMakeLists.txt
math/cmake/: math_core_src.cmake
math/include/: K15_MathPrerequisites.h  K15_MathUtil.h  K15_MathUtil.inl  K15_Math_Prerequisites.h  K15_Mathematic.h  K15_Matrix3.h  K15_Matrix3x3.h  K15_Matrix4.h  K15_Matrix4x4.h  K15_MatrixUtil.h  K15_Quaternion.h  K15_QuaternionUtil.h  K15_Vector2.h  K15_Vector3.h  K15_Vector4.h  NEON2SSE.h
math/src/: K15_MathUtil.cpp  K15_Mathematic.cpp  K15_Mathematic.inl  K15_Matrix3.cpp  K15_Matrix3x3.cpp  K15_Matrix3x3.inl  K15_Matrix4.cpp  K15_Matrix4x4.cpp  K15_Matrix4x4.inl  K15_MatrixUtil.cpp  K15_Quaternion.cpp  K15_Quaternion.inl  K15_Vector2.cpp  K15_Vector3.cpp  K15_Vector3.inl  K15_Vector4.cpp
renderer_opengl/: CMakeLists.txt
renderer_opengl/cmake/: renderer_opengl_compiler_settings.cmake  renderer_opengl_dependencies.cmake  renderer_opengl_src.cmake  renderer_opengl_src.cmake~
renderer_opengl/include/: K15_OpenGL_DebugUtil.h  K15_OpenGL_Emulation.h  K15_OpenGL_Extensions.h  K15_OpenGL_Extensions_Impl.h  K15_OpenGL_GpuBufferImpl.h  K15_OpenGL_GpuProgramBatchImpl.h  K15_OpenGL_GpuProgramImpl.h  K15_OpenGL_PrecompiledHeader.h  K15_OpenGL_Prerequisites.h  K15_OpenGL_Renderer.h  K15_OpenGL_TextureImpl.h  K15_OpenGL_TextureSamplerImpl.h  K15_OpenGL_VertexDeclarationImpl.h  K15_RendererOGLPrerequisites.h  plugin.h
renderer_opengl/shader/: default.frag  default.vert
renderer_opengl/src/: K15_OpenGL_DebugUtil.cpp  K15_OpenGL_Emulation.cpp  K15_OpenGL_GpuBufferImpl.cpp  K15_OpenGL_GpuProgramBatchImpl.cpp  K15_OpenGL_GpuProgramImpl.cpp  K15_OpenGL_PrecompiledHeader.cpp  K15_OpenGL_Renderer.cpp  K15_OpenGL_TextureImpl.cpp  K15_OpenGL_TextureSamplerImpl.cpp  K15_OpenGL_VertexDeclarationImpl.cpp  plugin.cpp
test/: CMakeLists.txt
test/include/: K15_EngineTestFirstPersonControls.h  K15_EngineTestFirstPersonControls.inl  K15_EngineTestModule.h  K15_EngineTestRenderProcess.h
test/res/: debug.vert  default.frag  default.vert  gamedir.ini  input.ini  light.glsl
test/src/: ContainerTest.cpp  FileManagerTest.cpp  K15_EngineTestFirstPersonControls.cpp  MathTest.cpp  (+4 more)
testgame/: CMakeLists.txt
tools/: CMakeLists.txt
unittest/: CMakeLists.txt
(+1306 files in other folders)
